Adding unit test to cottage and customer